--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <title>Mon premier site</title>
+  <meta charset="UTF-8">
+  <title>Côme Royer-Varnat</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Bienvenue sur mon site !</h1>
-    <p>Ceci est mon premier site créé avec GitHub Pages.</p>
+
+  <div class="center">
+    <h1>PRENOM</h1>
+  </div>
+
+  <div class="menu">
+    <a href="about.html">À propos</a>
+    <a href="goals.html">Objectifs</a>
+    <a href="faq.html">FAQ</a>
+    <a href="books.html">Livre</a>
+  </div>
+
 </body>
 </html>
