--- a/goals.html
+++ b/goals.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <title>Objectifs</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+  <div class="center">
+    <h1>Être allé a toute les séances d'athlétisme + courir une fois le week end en plus = 4 séances par semaine.</h1>
+    <p>Avoir lu tous les jours +30 min.</p>
+    <p>Avoir fait tous mes devoirs réviser chaque évalutions pour rester au dessus de 18 de moyenne.</p>
+    <p>Avoir progresser en math et en programmation solo.</p>
+    <p>Avoir progresser en math et en programmation solo.</p>
+    <p>Avoir eu +9h de sommeil par jour donc ce coucher max a 22h.</p>
+    
+    <p>Uptaded.01-01-2026</p>
+  </div>
+
+  <div class="menu">
+    <a href="index.html">Accueil</a>
+  </div>
+
+</body>
+</html>
 
