--- a/faq.html
+++ b/faq.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <title>FAQ</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
+  <div class="center">
+    <h1>Comming soon.</h1>
+    <p>Uptaded.01-01-2026</p>
+  </div>
+
+  <div class="menu">
+    <a href="index.html">Accueil</a>
+  </div>
+
+</body>
+</html>
