--- a/books.html
+++ b/books.html
@@ -8,7 +8,8 @@
 <body>
 
   <div class="center">
-    <h1>Comming soon.</h1>
+    <h1>Books.</h1>
+    <p>Comming soon.</p>
     <p>Uptaded.01-01-2026</p>
   </div>
 
