--- a/goals.html
+++ b/goals.html
@@ -8,7 +8,8 @@
 <body>
 
   <div class="center">
-    <h1>Être allé a toute les séances d'athlétisme + courir une fois le week end en plus = 4 séances par semaine.</h1>
+    <h1>Goals</h1>
+    <p>Être allé a toute les séances d'athlétisme + courir une fois le week end en plus = 4 séances par semaine.</p>
     <p>Avoir lu tous les jours +30 min.</p>
     <p>Avoir fait tous mes devoirs réviser chaque évalutions pour rester au dessus de 18 de moyenne.</p>
     <p>Avoir progresser en math et en programmation solo.</p>
