--- a/books.html
+++ b/books.html
@@ -2,13 +2,13 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Books</title>
+  <title>Livres</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <div class="center">
-    <h1>Books.</h1>
+    <h1>Livres.</h1>
     <p>Comming soon.</p>
     <p>Uptaded.01-01-2026</p>
   </div>
