--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <a href="goals.html">Objectifs</a>
     <a href="faq.html">FAQ</a>
     <a href="books.html">Livre</a>
-    <a href="experience.html">Livre</a>
+    <a href="experience.html">Experience</a>
   </div>
 
 </body>
