Update book description in books.html

--- a/books.html
+++ b/books.html
@@ -9,7 +9,7 @@
 
   <div class="center">
     <h1>Livres.</h1>
-    <p>Comming soon.</p>
+    <p>'La Vague' Todd Strasser 150 pages.</p>
     <p>Uptaded.01-01-2026</p>
   </div>
 
